--- a/resources.qrc
+++ b/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>resources/images/saturn.png</file>
+        <file>resources/images/default.png</file>
+        <file>resources/images/saturn3ultra.png</file>
+        <file>resources/images/saturn3.png</file>
     </qresource>
 </RCC>
